@@ -22,9 +22,15 @@ import com.soprasteria.g4it.backend.common.filesystem.model.CsvFileMapperInfo;
 import com.soprasteria.g4it.backend.common.filesystem.model.FileType;
 import com.soprasteria.g4it.backend.common.model.Context;
 import com.soprasteria.g4it.backend.common.model.FileToLoad;
+import com.soprasteria.g4it.backend.common.model.LineError;
+import com.soprasteria.g4it.backend.common.utils.Constants;
 import com.soprasteria.g4it.backend.common.utils.CsvUtils;
 import com.soprasteria.g4it.backend.exception.AsyncTaskException;
+import com.soprasteria.g4it.backend.server.gen.api.dto.InApplicationRest;
+import com.soprasteria.g4it.backend.server.gen.api.dto.InPhysicalEquipmentRest;
 import com.soprasteria.g4it.backend.server.gen.api.dto.InVirtualEquipmentRest;
+import org.apache.commons.csv.CSVParser;
+import org.apache.commons.csv.CSVRecord;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -38,6 +44,7 @@ import org.springframework.context.MessageSource;
 
 import java.io.File;
 import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDateTime;
@@ -59,16 +66,19 @@ class LoadFileServiceTest {
     CsvFileMapperInfo csvFileMapperInfo;
     @Mock
     MessageSource messageSource;
+    @SuppressWarnings("unused")
     @Mock
     LoadDatacenterService loadDatacenterService;
     @Mock
     LoadPhysicalEquipmentService loadPhysicalEquipmentService;
     @Mock
     LoadVirtualEquipmentService loadVirtualEquipmentService;
+    @SuppressWarnings("unused")
     @Mock
     LoadApplicationService loadApplicationService;
     @Mock
     CsvToInMapper csvToInMapper;
+    @SuppressWarnings("unused")
     @Mock
     InventoryRepository inventoryRepository;
     @Mock
@@ -96,7 +106,6 @@ class LoadFileServiceTest {
     void setUp() throws Exception {
         tempCsv = Files.createTempFile(tempDir, "converted-", ".csv");
 
-        // make common stubbings lenient to avoid UnnecessaryStubbingException
         lenient().when(fileToLoad.getOriginalFileName()).thenReturn("original.csv");
         lenient().when(context.getInventoryId()).thenReturn(123L);
         lenient().when(context.getDatetime()).thenReturn(referenceTime);
@@ -105,12 +114,10 @@ class LoadFileServiceTest {
         lenient().when(context.getFilesToLoad()).thenReturn(List.of(fileToLoad));
         lenient().when(fileToLoad.getFileType()).thenReturn(FileType.DATACENTER);
 
-        // set private localWorkingFolder to a temp folder so writeRejected writes there
         Field f = LoadFileService.class.getDeclaredField("localWorkingFolder");
         f.setAccessible(true);
         f.set(loadFileService, tempDir.toString());
 
-        // ensure rejected root exists (initFolder is called in real app; tests ensure folder is present)
         Files.createDirectories(tempDir.resolve("rejected"));
     }
 
@@ -145,7 +152,7 @@ class LoadFileServiceTest {
 
         assertNotNull(errors);
         assertEquals(1, errors.size());
-        assertEquals("Unknown header message", errors.get(0));
+        assertEquals("Unknown header message", errors.getFirst());
         verify(messageSource).getMessage(eq("header.unknown"), any(Object[].class), eq(Locale.ENGLISH));
     }
 
@@ -207,7 +214,7 @@ class LoadFileServiceTest {
 
         assertNotNull(errors);
         assertEquals(1, errors.size());
-        assertEquals("Missing headers", errors.get(0));
+        assertEquals("Missing headers", errors.getFirst());
         verify(messageSource).getMessage(eq("header.mandatory"), any(Object[].class), eq(Locale.ENGLISH));
     }
 
@@ -242,5 +249,163 @@ class LoadFileServiceTest {
 
         InApplication saved = captor.getValue();
         assertEquals("PE1", saved.getPhysicalEquipmentName());
+    }
+
+    @Test
+    void readPhysicalEquipments_emptyParser_executesSingleEmptyBatch() throws Exception {
+        CSVParser parser = mockParserWithRows(0);
+        when(loadPhysicalEquipmentService.execute(context, fileToLoad, 0, Collections.emptyList()))
+                .thenReturn(Collections.emptyList());
+
+        List<LineError> errors = invokeReadPhysicalEquipments(parser);
+
+        assertNotNull(errors);
+        assertTrue(errors.isEmpty());
+        verifyNoInteractions(csvToInMapper);
+        verify(loadPhysicalEquipmentService).execute(context, fileToLoad, 0, Collections.emptyList());
+    }
+
+    @Test
+    void readPhysicalEquipments_singleRecord_mapsAndLoadsSinglePage() throws Exception {
+        InPhysicalEquipmentRest mapped = new InPhysicalEquipmentRest();
+
+        CSVParser parser = mockParserWithRows(1);
+        when(csvToInMapper.csvInPhysicalEquipmentToRest(any(), eq(123L), eq(null))).thenReturn(mapped);
+        List<InPhysicalEquipmentRest> capturedBatch = new ArrayList<>();
+        when(loadPhysicalEquipmentService.execute(eq(context), eq(fileToLoad), eq(0), anyList()))
+                .thenAnswer(invocation -> {
+                    capturedBatch.addAll(invocation.getArgument(3));
+                    return Collections.emptyList();
+                });
+
+        List<LineError> errors = invokeReadPhysicalEquipments(parser);
+
+        assertNotNull(errors);
+        assertTrue(errors.isEmpty());
+        verify(csvToInMapper, times(1)).csvInPhysicalEquipmentToRest(any(), eq(123L), eq(null));
+        verify(loadPhysicalEquipmentService).execute(eq(context), eq(fileToLoad), eq(0), anyList());
+        assertEquals(1, capturedBatch.size());
+        assertSame(mapped, capturedBatch.getFirst());
+    }
+
+    @Test
+    void readPhysicalEquipments_moreThanBatchSize_splitsPagesAndAggregatesErrors() throws Exception {
+        int totalRows = Constants.BATCH_SIZE + 1;
+        LineError page0Error = new LineError("physical.csv", 1, "page 0 error");
+        LineError page1Error = new LineError("physical.csv", 2, "page 1 error");
+
+        CSVParser parser = mockParserWithRows(totalRows);
+        when(csvToInMapper.csvInPhysicalEquipmentToRest(any(), eq(123L), eq(null)))
+                .thenAnswer(invocation -> new InPhysicalEquipmentRest());
+        List<List<InPhysicalEquipmentRest>> allBatches = new ArrayList<>();
+        when(loadPhysicalEquipmentService.execute(eq(context), eq(fileToLoad), anyInt(), anyList()))
+                .thenAnswer(invocation -> {
+                    allBatches.add(new ArrayList<>(invocation.getArgument(3)));
+                    Integer pageNumber = invocation.getArgument(2);
+                    return pageNumber == 0 ? List.of(page0Error) : List.of(page1Error);
+                });
+
+        List<LineError> errors = invokeReadPhysicalEquipments(parser);
+
+        assertEquals(List.of(page0Error, page1Error), errors);
+        verify(csvToInMapper, times(totalRows)).csvInPhysicalEquipmentToRest(any(), eq(123L), eq(null));
+        verify(loadPhysicalEquipmentService, times(2)).execute(eq(context), eq(fileToLoad), anyInt(), anyList());
+        assertEquals(2, allBatches.size());
+        assertEquals(Constants.BATCH_SIZE, allBatches.get(0).size());
+        assertEquals(1, allBatches.get(1).size());
+        verify(loadPhysicalEquipmentService).execute(eq(context), eq(fileToLoad), eq(0), anyList());
+        verify(loadPhysicalEquipmentService).execute(eq(context), eq(fileToLoad), eq(1), anyList());
+    }
+
+    @Test
+    void readApplications_emptyParser_executesSingleEmptyBatch() throws Exception {
+        CSVParser parser = mockParserWithRows(0);
+        when(loadApplicationService.execute(context, fileToLoad, 0, Collections.emptyList()))
+                .thenReturn(Collections.emptyList());
+
+        List<LineError> errors = invokeReadApplications(parser);
+
+        assertNotNull(errors);
+        assertTrue(errors.isEmpty());
+        verify(loadApplicationService).execute(context, fileToLoad, 0, Collections.emptyList());
+        verify(csvToInMapper, never()).csvInApplicationToRest(any(), anyLong());
+    }
+
+    @Test
+    void readApplications_singleRecord_mapsAndLoadsSinglePage() throws Exception {
+        InApplicationRest mapped = new InApplicationRest();
+
+        CSVParser parser = mockParserWithRows(1);
+        when(csvToInMapper.csvInApplicationToRest(any(), eq(123L))).thenReturn(mapped);
+        List<InApplicationRest> capturedBatch = new ArrayList<>();
+        when(loadApplicationService.execute(eq(context), eq(fileToLoad), eq(0), anyList()))
+                .thenAnswer(invocation -> {
+                    capturedBatch.addAll(invocation.getArgument(3));
+                    return Collections.emptyList();
+                });
+
+        List<LineError> errors = invokeReadApplications(parser);
+
+        assertNotNull(errors);
+        assertTrue(errors.isEmpty());
+        verify(csvToInMapper).csvInApplicationToRest(any(), eq(123L));
+        verify(loadApplicationService).execute(eq(context), eq(fileToLoad), eq(0), anyList());
+        assertEquals(1, capturedBatch.size());
+        assertSame(mapped, capturedBatch.getFirst());
+    }
+
+    @Test
+    void readApplications_moreThanBatchSize_splitsPagesAndAggregatesErrors() throws Exception {
+        int totalRows = Constants.BATCH_SIZE + 1;
+        LineError page0Error = new LineError("application.csv", 1, "page 0 error");
+        LineError page1Error = new LineError("application.csv", 2, "page 1 error");
+
+        CSVParser parser = mockParserWithRows(totalRows);
+        when(csvToInMapper.csvInApplicationToRest(any(), eq(123L)))
+                .thenAnswer(invocation -> new InApplicationRest());
+        List<List<InApplicationRest>> allBatches = new ArrayList<>();
+        when(loadApplicationService.execute(eq(context), eq(fileToLoad), anyInt(), anyList()))
+                .thenAnswer(invocation -> {
+                    allBatches.add(new ArrayList<>(invocation.getArgument(3)));
+                    Integer pageNumber = invocation.getArgument(2);
+                    return pageNumber == 0 ? List.of(page0Error) : List.of(page1Error);
+                });
+
+        List<LineError> errors = invokeReadApplications(parser);
+
+        assertEquals(List.of(page0Error, page1Error), errors);
+        verify(csvToInMapper, times(totalRows)).csvInApplicationToRest(any(), eq(123L));
+        verify(loadApplicationService, times(2)).execute(eq(context), eq(fileToLoad), anyInt(), anyList());
+        assertEquals(2, allBatches.size());
+        assertEquals(Constants.BATCH_SIZE, allBatches.getFirst().size());
+        assertEquals(1, allBatches.get(1).size());
+        verify(loadApplicationService).execute(eq(context), eq(fileToLoad), eq(0), anyList());
+        verify(loadApplicationService).execute(eq(context), eq(fileToLoad), eq(1), anyList());
+    }
+
+    private List<LineError> invokeReadPhysicalEquipments(CSVParser parser) throws Exception {
+        Method method = LoadFileService.class.getDeclaredMethod("readPhysicalEquipments", Context.class, FileToLoad.class, CSVParser.class);
+        method.setAccessible(true);
+        @SuppressWarnings("unchecked")
+        List<LineError> result = (List<LineError>) method.invoke(loadFileService, context, fileToLoad, parser);
+        return result;
+    }
+
+    private List<LineError> invokeReadApplications(CSVParser parser) throws Exception {
+        Method method = LoadFileService.class.getDeclaredMethod("readApplications", Context.class, FileToLoad.class, CSVParser.class);
+        method.setAccessible(true);
+        @SuppressWarnings("unchecked")
+        List<LineError> result = (List<LineError>) method.invoke(loadFileService, context, fileToLoad, parser);
+        return result;
+    }
+
+    private CSVParser mockParserWithRows(int rowCount) {
+        CSVParser parser = mock(CSVParser.class);
+        List<CSVRecord> records = new ArrayList<>(rowCount);
+        for (int i = 0; i < rowCount; i++) {
+            records.add(mock(CSVRecord.class));
+        }
+        when(parser.iterator()).thenReturn(records.iterator());
+        return parser;
     }
 }
